@@ -207,4 +207,30 @@ public class ToParentBlockJoinSortField extends SortField {
       }
     };
   }
+
+  @Override
+  public int hashCode() {
+    final int prime = 31;
+    int result = super.hashCode();
+    result = prime * result + ((childFilter == null) ? 0 : childFilter.hashCode());
+    result = prime * result + (order ? 1231 : 1237);
+    result = prime * result + ((parentFilter == null) ? 0 : parentFilter.hashCode());
+    return result;
+  }
+
+  @Override
+  public boolean equals(Object obj) {
+    if (this == obj) return true;
+    if (!super.equals(obj)) return false;
+    if (getClass() != obj.getClass()) return false;
+    ToParentBlockJoinSortField other = (ToParentBlockJoinSortField) obj;
+    if (childFilter == null) {
+      if (other.childFilter != null) return false;
+    } else if (!childFilter.equals(other.childFilter)) return false;
+    if (order != other.order) return false;
+    if (parentFilter == null) {
+      if (other.parentFilter != null) return false;
+    } else if (!parentFilter.equals(other.parentFilter)) return false;
+    return true;
+  }
 }
